--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
         "livewire/volt": "*",
+        "maatwebsite/excel": "^1.1",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
